:adhesive_bandage: Fixed Padding for Properties Text Alignment

--- a/src/fragments/_03f-metadata-view.scss
+++ b/src/fragments/_03f-metadata-view.scss
@@ -13,24 +13,21 @@ body {
   --metadata-input-font-size: var(--font-smaller);
 }
 
+.markdown-source-view .metadata-container .metadata-add-button {
+  margin-top: var(--size-2-2);
+  padding-left: var(--size-2-2);
+  position: absolute;
+  font-size: var(--font-smaller);
+  left: 0;
+  top: 0;
+}
+
 .metadata-container {
   --input-height: var(--line-height-normal);
     font-family: var(--font-monospace);
     margin-left: 25px; // gutter
     margin-block-end: 0;
 
-  .metadata-add-button {
-    margin-top: var(--size-2-2);
-    padding-left: var(--size-2-2);
-    position: absolute;
-    font-size: var(--font-smaller);
-    left: 0;
-    top: 0;
-  }
-
-  .metadata-property-icon {
-    align-self: center;
-  }
   .metadata-property-icon,
   .metadata-property-key,
   .metadata-property-key-input,
@@ -59,7 +56,7 @@ body {
     .metadata-property-icon {
       --icon-size: var(--icon-xs);
       width: var(--icon-s);
-      height: var(--icon-s);
+      min-height: var(--line-height-normal);
     }
     .multi-select-container {
       padding: 0;
